# cxx-warnings-playground

./: CMakeLists.txt  my_lib.cc  readme.md
dependencies/not-my-lib/: CMakeLists.txt  not_my_lib.cc
dependencies/not-my-lib-header-only/: CMakeLists.txt  not_my_lib_header_only_dummy_unit.cc
dependencies/not-my-lib-header-only/include/not-my-lib-header-only/: not_my_lib_header_only.hh
dependencies/not-my-lib-header-only/tests/: CMakeLists.txt  not_my_lib_header_only_test1.cc
dependencies/not-my-lib/include/not-my-lib/: not_my_lib.hh
dependencies/not-my-lib/tests/: CMakeLists.txt  not_my_lib_test1.cc
include/my-lib/: my_lib.hh
tests/: CMakeLists.txt  my_lib_test.cc
