cmake_minimum_required(VERSION 3.16)
project(my-lib)
add_library(${PROJECT_NAME} SHARED my_lib.cc)
target_include_directories(${PROJECT_NAME} PUBLIC include/)
target_compile_options(${PROJECT_NAME} PUBLIC -std=c++17 -Wall)
add_subdirectory(dependencies/not-my-lib)
target_link_libraries(${PROJECT_NAME} PUBLIC not-my-lib)
add_subdirectory(dependencies/not-my-lib-header-only)
target_link_libraries(${PROJECT_NAME} PUBLIC not-my-lib-header-only)
add_subdirectory(tests)
